<resources>

    <!-- 권한-->
    <string name="PermissionDenyMsg_snackbar">권한 요청에 동의 해주셔야 이용 가능합니다.\n설정에서 권한 허용 하시기 바랍니다.</string>
    <string name="NoCameraDevice_snackbar">디바이스가 카메라를 지원하지 않습니다.</string>

    <string name="app_name">SullivanPlus</string>

    <!-- 현재 모드 태그 -->
    <string name="curr_mode">curr_mode</string>


    <!-- 모드 이름 정렬-->
    <string name="mode_ai">AI 모드</string>
    <string name="mode_text">문자 인식</string>
    <string name="mode_face">얼굴 인식</string>
    <string name="mode_image">이미지 묘사</string>
    <string name="mode_color">색상 인식</string>
    <string name="mode_light">빛 밝기</string>
    <string name="mode_magnify">돋보기</string>
    <string name="mode_note">노트 보기</string>
    <string name="mode_community">커뮤니티</string>
    <string name="mode_help">도움말</string>
    <string name="mode_setting">설정</string>

    <string name="color_one">단일 색상인식</string>
    <string name="color_multi">전체 색상인식</string>

    <string name="color_fail">인식 실패하였습니다.</string>

    <string name="color_white">흰색</string>
    <string name="color_gray">회색</string>
    <string name="color_black">검정색</string>
    <string name="color_red">빨간색</string>
    <string name="color_orange">주황색</string>
    <string name="color_yellow">노랑색</string>
    <string name="color_yellowgreen1">연두색</string>
    <string name="color_green">초록색</string>
    <string name="color_bluegreen">청록색</string>
    <string name="color_sky">하늘색</string>
    <string name="color_blue">파랑색</string>
    <string name="color_navy">남색</string>
    <string name="color_purple">보라색</string>
    <string name="color_wine">자주색</string>


    <!-- 추가 기능 이름 정렬-->
    <string name="addition_call">영상통화</string>
    <string name="addition_dcim">사진첩</string>
    <string name="addition_flash_on">플래시 켜기</string>
    <string name="addition_flash_off">플래시 끄기</string>
    <string name="addition_note">노트저장</string>
    <string name="addition_share">공유하기</string>
    <string name="addition_auto">자동모드 시작</string>
    <string name="addition_color_one">단일색상</string>
    <string name="addition_color_multi">전체색상</string>
    <string name="addition_reverse_on">반전 켜기</string>
    <string name="addition_reverse_off">반전 끄기</string>

    <string name="addition_flash_on_snackbar">플래시 켜짐</string>
    <string name="addition_flash_off_snackbar">플래시 꺼짐</string>

    <string name="addition_set"> 설정됨</string>

    <!-- 노트 보기-->
    <string name="saveTitle_alert">파일명 설정</string>
    <string name="saveMessage_alert">파일 저장 위치는 내장메모리 Sullivan 폴더이며, TXT파일로 저장됩니다.</string>
    <string name="saveHint_alert">파일명을 입력해주세요.</string>
    <string name="saveAgain_alert">내용을 입력해주세요.</string>

    <string name="addtitle_alert">노트 저장</string>
    <string name="addMessage_alert">노트를 저장하는 기능입니다.</string>
    <string name="addHint_alert">내용을 적어주세요.</string>

    <string name="saveagain_snackbar">파일명을 입력해주세요.</string>
    <string name="saveSuccessFront_snackbar">내장메모리 Sullivan 폴더에 </string>
    <string name="saveSuccessBack_snackbar">.txt 파일을 저장했습니다.</string>


    <!-- 커뮤니티 -->
    <string name="community_item1">문의하기</string>
    <string name="community_item2">설리번+ 평가하기</string>
    <string name="community_item3">친구초대</string>


    <!--도움말-->
    <string name="help_item1">사용법 안내</string>
    <string name="help_item2">모드 안내</string>
    <string name="help_item3">기능 안내</string>
    <string name="help_item4">이용 권한 안내</string>
    <string name="help_item5">오픈소스 라이센스</string>
    <string name="help_item6">앱 정보</string>


    <!-- 설정 프리퍼런스 이름-->
    <string name="result_voice">voice_guide</string>
    <string name="mode_set">mode_set</string>
    <string name="menu_set">menu_set</string>
    <string name="text_recog">textcheck</string>
    <string name="face_recog">facecheck</string>
    <string name="displaylight">displayBrighten</string>
    <string name="message_time">message_time</string>


    <string name="toolbar_save">파일 저장</string>
    <string name="toolbar_delete">삭제</string>
    <string name="toolbar_share">공유</string>
</resources>
